--- a/html.html
+++ b/html.html
@@ -25,7 +25,7 @@
 <p>
   <strong><input type="checkbox">why 2. 대학생 때 Matlab 수업, C언어 등을 들으며 힘들긴 했지만 결과가 바로바로 도출되는 것에 신기해했음.</strong>
   <br><br>
-  <img src="score.JPG" width="450"><br>
+  <img src="score.JPG" width="100%"><br>
   (비록 A+이 아닌 A0이긴 했지만 말야^^)
 </p>
 <p>
